<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guide_line_end"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_line_start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_fullName_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_company_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/company"
        app:layout_constraintEnd_toEndOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/edit_fullName_text_input_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_phone_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/edit_company_text_input_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            tools:ignore="LabelFor" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_notes_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/notes"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/edit_phone_text_input_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/edit_notes_text_input_layout">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/edit"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/delete"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
